# llvm-project-llvmorg-1.0.0-annotation

./: CMakeLists.txt  Makefile.config  config.status  configure  mklib
include/Config/: config.h
include/Support/: BitSetVector.h  CommandLine.h  STLExtras.h  ilist
include/llvm/: Type.h
include/llvm/Analysis/: Dominators.h
include/llvm/Bytecode/: Primitives.h
include/llvm/CodeGen/: MachineInstr.h  ValueSet.h
include/llvm/ExecutionEngine/: ExecutionEngine.h
lib/Analysis/: CMakeLists.txt  PostDominators.cpp
lib/Analysis/IPA/: CallGraph.cpp  IPModRef.cpp
lib/Analysis/LiveVar/: BBLiveVar.cpp
lib/Bytecode/: CMakeLists.txt
lib/Bytecode/Reader/: ArchiveReader.cpp  ReaderWrappers.cpp
lib/CWriter/: CMakeLists.txt  Writer.cpp
lib/CodeGen/: CMakeLists.txt  RegAllocLocal.cpp  RegAllocSimple.cpp
lib/CodeGen/InstrSched/: InstrScheduling.cpp  SchedGraphCommon.cpp
lib/CodeGen/InstrSelection/: InstrSelectionSupport.cpp
lib/ExecutionEngine/: CMakeLists.txt
lib/ExecutionEngine/Interpreter/: Execution.cpp  ExternalFunctions.cpp
lib/ExecutionEngine/JIT/: JIT.cpp  (+2 more)
lib/Support/: CMakeLists.txt  CommandLine.cpp  FileUtilities.cpp  Signals.cpp  Statistic.cpp  SystemUtils.cpp  Timer.cpp
lib/Transforms/: CMakeLists.txt
lib/Transforms/IPO/: Parallelize.cpp  PruneEH.cpp
lib/Transforms/Scalar/: DCE.cpp  LoopSimplify.cpp  LowerSwitch.cpp  SimplifyCFG.cpp
lib/Transforms/Utils/: PromoteMemoryToRegister.cpp
lib/VMCore/: BasicBlock.cpp  CMakeLists.txt  Dominators.cpp  Function.cpp  Module.cpp  PassManagerT.h
projects/sample/: Makefile.common  config.status
